fix: remove jsxGraph border and fix Q12 top clipping by extending boundingbox

--- a/src/jsxgraph.css
+++ b/src/jsxgraph.css
@@ -35,13 +35,10 @@
 .jxgbox {
     /* for IE 7 */
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     background-color: #fff;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #356aa0;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
+    border-style: none;
+    border-width: 0;
     margin: 0;
     -ms-touch-action: none;
     /* "touch-action: none;" is set with JavaScript. */
